src/playground/playground.css
/* <<<<<<< HEAD */
* {
  margin: 0;
  padding: 0;
}

html,
body {
  height: 100%;
}

.hidden {
  visibility: hidden;
}

.hidden-popup{
  opacity: 0;
}
.hidden-popup>.popup-content{
  scale: 0;
}
.visible {
  opacity: 1;
}
.visible>.popup-content{
  scale: 1;
}
#bounty-popup{
  transition: opacity 0.5s ease;
}
.popup-content{
  transition: scale 0.5s ease;
}


body {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100%;
  -ms-overflow-style: none;
  scrollbar-width: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;

  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

.sol-slot.removed {
  pointer-events: none;
  background-color: rgba(0, 0, 0, 0);
}

.sol-slot {
  background-color: rgba(0, 0, 0, 0);
}

img {
  -webkit-user-drag: none;
}

body::-webkit-scrollbar {
  width: 0;
}

header {
  width: 100%;
}

.header-interface-list {
  display: flex;
  justify-content: space-between;
  background-color: #00000044;
  list-style-type: none;
}

.header-ui-container {
  display: flex;
  flex-direction: column;
}

.header-navigation-btn {
  width: 2.5vw;
  height: 2.5vw;
  margin: 0.2vw;
  background: url('../../Sprites/Buttons/Used_Button_01.png');
  background-size: cover;
  border-radius: 50%;
  border: none;
  display: flex;
  justify-content: center;
  align-items: start;
}

.header-navigation-list-icon {
  width: 1.5vw;
  margin-top: 15%;
}

.counter-text {
  color: #ffffff;
  font-size: 1.8vw;
}

.step-icon {
  width: 2vw;
  margin-bottom: -10%;
}


/* pop-up */

.popup {
  display: none;
  position: absolute;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.84);
  z-index: 1000;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  color: #fff;
  font-weight: bold;
  text-align: center;
}
.lose-screen-popup{
  justify-content: center;
}
.end-level{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-top: 20vh;
}
.end-level-title{
  margin-bottom: 4vh;
  font-size: 3.5vh;
}
.lose-level{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-bottom: 25vh;
}
.lose-level-title{
  font-size: 4.5vh;
  color: #d64646;
}
.lose-btns-container{
  display: flex;
  align-items:center;
  justify-content: center;
}
.lose-screen-ads-icon{
  width: 4vh;
}
.refresh-btn, .home-page-btn{
  width: 7vh;
  height: 7vh;
  margin: 0.5vw;
  background: url('../../Sprites/Buttons/Used_Button_01.png');
  background-size: cover;
  border-radius: 50%;
  border: none;
  display: flex;
  justify-content: center;
  align-items: start;
}
.refresh-btn{
  margin-right: 3vw;
}
.popup_back-to{
  position: absolute;
  top: 2vh;
  right: 2vh;
}
.new-achievements{
  font-size: 2.5vh;
}
.bounty-list{
  height: 20vh;
  display: flex;
  align-items: center;
  justify-content: center;
}
.custom-line{
  width: 6vw;
  height: 1px;
  background-color: #fff;
}
.bounty-title{
  font-size: 2vh;
  margin: 0 1vw;
}
.next-btn {
  border-radius: 2vw;
  width: 23vh;
  height: 8vh;
  border: none;
  background: no-repeat;
  background-size: 100% 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 0.5vw;
  background-image: url('../../Sprites/Buttons/Used_Button_03.png');
  margin-bottom: 5vh;
}
.next-ads-btn {
  border-radius: 2vw;
  width: 23vh;
  height: 8vh;
  border: none;
  background: no-repeat;
  background-size: 100% 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 0.5vw;
  background-image: url('../../Sprites/Buttons/Used_Button_03.png');
}

.next-btn-title {
  font-weight: bold;
  color: #0000005c;
  font-size: 2.1vh;
}

main {
  flex: 1 1 auto;
}

.main-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.active-cards-zone,
.bottom-cards-zone {
  width: 100%;
  display: flex;
  justify-content: center;
  column-gap: 1vw;
}

.active-cards-container {
  background-color: #0000003d;
}

.active-cards-container,
.cards-container,
.extra-cards-container {
  width: 6vw;
  height: 8vw;
  border-radius: 0.5vw;
}

.extra-cards-container {
  display: flex;
  flex-direction: row-reverse;
}

.cards-container {
  display: flex;
  background-color: #0000003d;
}

:root {
  --closed-card-offset: -7.5vw;
  --opened-card-offset: -6.5vw;
  --card-height: 8vw;
}

.active-cards-container>.card-element.closed:not(:first-child, .locked) {
  margin-top: -7.5vw;
  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
    margin-left 0.25s ease;
}

.active-cards-container>.card-element.first:not(:first-child, .locked) {
  margin-top: -7.5vw;
  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
    margin-left 0.25s ease;
}

.active-cards-container>.card-element.opened:not(:first-child, .first, .locked) {
  margin-top: -6.5vw;
  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
    margin-left 0.25s ease;
}

.active-cards-container>.card-element.locked:not(:first-child) {
  margin-top: -8vw;
  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
    margin-left 0.25s ease;
}

.card-element.highlighted {
  border-color: #ffff00a1;
  box-shadow: 0 0 3px 3px #ffff00a1;
  transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
    margin-left 0.25s ease;
}

.card-locker-hidden {
  scale: 0 0;
  margin-top: -8vw;
}

.card-locked-showed {
  margin-top: -6.5vw;
  width: 6vw;
  height: 8vw;
  scale: 1 1;
  background-image: url('../../Sprites/card_lock.png');
  background-size: contain;
  background-repeat: no-repeat;

  transition: scale 0.25s ease;
}

.active-cards-container>.card-element.opened.selected {
  margin-top: -6.5vw;
  width: 6.6vw;
  height: 8.8vw;
  margin-left: -0.3vw;
  transition: all 0.25s ease;
}

.active-cards-container>.card-element.opened.selected:not(.first) {
  margin-top: -7vw;
  width: 6.6vw;
  height: 8.8vw;
  margin-left: -0.3vw;
  transition: all 0.25s ease;
}

.story-mode-card-zone {
  height: 50%;
  min-height: 8vw;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
}

.steps-counter-container {
  display: flex;
  justify-content: space-between;
}

.timer {
  margin-right: 10vw;
}

.extra-cards-container>.card-element:not(:last-child) {
  margin-left: -5.98vw;
}

.cards-container>.card-element:not(:first-child) {
  margin-left: -6.05vw;
}

.card-element {
  width: 6vw;
  height: 8vw;
  min-width: 6vw;
}

.closed {
  background-size: cover;
}

footer {
  margin: auto 0;
}

.footer-control-panel {
  display: flex;
  justify-content: center;
  list-style-type: none;
}

.control-btn {
  width: 4vw;
  height: 4vw;
  margin: 0.5vw;
  background: url('../../Sprites/Buttons/Used_Button_01.png');
  background-size: cover;
  border-radius: 50%;
  border: none;
  display: flex;
  justify-content: center;
  align-items: start;
  position: relative;
}

.control-button-list-icon {
  width: 4.5vh;
  margin-top: 15%;
}

@media only screen and (orientation: portrait) {
  /* Cards sizes */

  .active-cards-container,
  .cards-container,
  .extra-cards-container,
  .card-element,
  .test-card {
    width: 8.8vw;
    height: 11.75vw;
  }

  .card-locked-showed {
    width: 8.8vw;
    height: 11.75vw;
  }

  .header-navigation-btn {
    width: 7vw;
    height: 7vw;
    margin: 0.5vw;
  }

  .header-navigation-list-icon {
    width: 5vw;
    margin-top: 10%;
  }

  :root {
    --closed-card-offset: -11.5vw;
    --opened-card-offset: -10vw;
    --card-height: 13vw;
  }

  .active-cards-container>.card-element.closed:not(:first-child, .locked) {
    /* margin-top: -11.5vw; */
    margin-top: -4.5vh;
    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
      margin-left 0.25s ease;
  }

  .active-cards-container>.card-element.first:not(:first-child, .locked) {
    /* margin-top: -11.5vw; */
    margin-top: -4.5vh;
    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
      margin-left 0.25s ease;
  }

  .active-cards-container>.card-element.opened:not(:first-child, .first, .locked) {
    /* margin-top: -10vw; */
    margin-top: -4vh;
    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
      margin-left 0.25s ease;
  }

  .active-cards-container>.card-element.locked:not(:first-child) {
    /* margin-top: -12.6vw; */
    margin-top: -5.4vh;
    transition: margin-top 0.25s ease, width 0.25s ease, height 0.25s ease,
      margin-left 0.25s ease;
  }

  .counter-text {
    font-size: 5vw;
  }

  .step-icon {
    width: 6vw;
  }

  main {
    margin-top: 2vw;
  }

  .main-container {
    max-height: 125vw;
    width: 95vw;
  }

  .extra-cards-container>.card-element:not(:last-child) {
    margin-left: -8vw;
    width: 9.6vw;
  }

  .cards-container>.card-element:not(:first-child) {
    margin-left: -8vw;
  }

  .cards-container.hidden {
    width: 1vw;
  }

  .bottom-cards-zone,
  .active-cards-zone {
    width: 104.5%;
    justify-content: space-between;
  }

  .control-btn {
    width: 12vw;
    height: 12vw;
    margin: 1vw;
  }

  .control-button-list-icon {
    width: 4.5vh;
    margin-top: 10%;
  }
}

@media only screen and (orientation: landscape) {
  /* Cards sizes */

  .active-cards-container,
  .cards-container,
  .extra-cards-container,
  .card-element {
    width: 6vw;
    height: 8vw;
  }

  main {
    margin: 1vw;
  }

  .main-container {
    width: 70vw;
  }
}

